add alt in images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="container">
-        <img src="images/illustration-hero.svg" class="top__img">
+        <img src="images/illustration-hero.svg" class="top__img" alt="Image ilustring music">
         <div class="summary">
             <div class="summary__desc">
                 <h2 class="desc__title">Order Summary</h2>
@@ -18,7 +18,7 @@
                 </p>
             </div>
             <div class="summary__plan">
-                <img src="images/icon-music.svg" class="plan__img">
+                <img src="images/icon-music.svg" class="plan__img" alt="Image icon music">
                 <div class="plan__text">
                     <h3 class="plan__title">Annual Plan</h3>
                     $59.99/year
